docs(api): revise Artifact B plan per Codex plan review
Folds in: context pinned server-side (no caller-influenced ?context in token);
in-code auth as primary gate + web.xml/shiro wiring-assertion test; JWT kid
header + rotation; B2 content-type/size guards; fixed false-positive aud/iss
test (same key, diff iss/aud); shiro.ini ordering before /**=anon; TTL clamp;
private-key hygiene in runbook.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>